--- a/inflearn/whiteship/springboot/pom.xml
+++ b/inflearn/whiteship/springboot/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>me.siyoon</groupId>
+            <artifactId>siyoon-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
