--- a/inflearn/whiteship/springboot/pom.xml
+++ b/inflearn/whiteship/springboot/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>siyoon-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
