--- a/inflearn/whiteship/springboot/pom.xml
+++ b/inflearn/whiteship/springboot/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
