템플릿엔진 타임리프 사용해보기
템플릿엔진의 기본 위치는
/src/main/resources/templates다.

--- a/inflearn/whiteship/web-mvc/pom.xml
+++ b/inflearn/whiteship/web-mvc/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>webjars-locator-core</artifactId>
             <version>0.37</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
 
     </dependencies>
 
