Hateoas를 적용하기 위해 Resource 객체를 사용해서 링크를 담아 반환
HATEOAS란 서버에서 클라이언트에게 정보를 제공 할 때 연관된 '링크' 정보도 같이 제공하는 것을 말한다.

--- a/inflearn/whiteship/web-mvc/pom.xml
+++ b/inflearn/whiteship/web-mvc/pom.xml
@@ -40,11 +40,16 @@
             <artifactId>webjars-locator-core</artifactId>
             <version>0.37</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
 
 
     </dependencies>
