driver-class-name은 명시 안해도 url로 자동 추측한다. / data-username이 아니라 그냥 username 이다!!

--- a/inflearn/whiteship/spring-data/src/main/resources/application.properties
+++ b/inflearn/whiteship/spring-data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.h2.console.enabled=true
 server.port=0
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.data-username=root
-spring.datasource.data-password=1234
-spring.datasource.url=jdbc:mariadb://localhost:3306/wbdev?useSSL=false
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/mytest?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
