--- a/colud-native2019/hello-server/pom.xml
+++ b/colud-native2019/hello-server/pom.xml
@@ -37,10 +37,10 @@
 <!--            <groupId>io.pivotal.spring.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-services-starter-circuit-breaker</artifactId>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.pivotal.spring.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-services-starter-config-client</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>io.pivotal.spring.cloud</groupId>
+            <artifactId>spring-cloud-services-starter-config-client</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>io.pivotal.spring.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-services-starter-service-registry</artifactId>-->
