[BUG] 리턴타입 수정

--- a/colud-native2019/hello-server/manifest.yml
+++ b/colud-native2019/hello-server/manifest.yml
@@ -4,4 +4,4 @@ applications:
   instances: 1
   path: target/hello-server-0.0.1-SNAPSHOT.jar
   random-route: true
-  services: [config-sercver]
+  services: [config-server]
