MockMvc로 롤백 (스프링 5이상만 웹테스트 클라이언트를 지원하기 때문에 필수로 알아야함)

--- a/how-to-handle-mock-mvc/pom.xml
+++ b/how-to-handle-mock-mvc/pom.xml
@@ -30,10 +30,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
+<!--        WebTestClient를 사용할려면 웹블럭스 의존성이 필요하다. mockMvc만 사용할경우는 필요없음-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-webflux</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
