--- a/toxecel-demo/pom.xml
+++ b/toxecel-demo/pom.xml
@@ -34,10 +34,39 @@
             <optional>true</optional>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.github.ckpoint</groupId>-->
+<!--            <artifactId>toexcel</artifactId>-->
+<!--            <version>0.8</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.github.ckpoint</groupId>
             <artifactId>toexcel</artifactId>
-            <version>0.8</version>
+            <version>0.91</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/toexcel-0.91.jar</systemPath>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.5</version>
         </dependency>
 
         <dependency>
