html 페이지 폼 및 js (+ 미커밋 파일 같이)

--- a/inflearn/kimyounghan/SpringBootAndJpa1/jpashop/src/main/resources/application.yml
+++ b/inflearn/kimyounghan/SpringBootAndJpa1/jpashop/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop
+    url: jdbc:h2:tcp://localhost/~/jpashop;MVCC=TRUE
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -10,9 +10,10 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
+        show_sql: true
         format_sql: true
 
 logging:
   level:
     org.hibernate.SQL: debug
+    org.hibernate.type: trace
