--- a/atdd-subway-path-master/build.gradle
+++ b/atdd-subway-path-master/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 test {
