--- a/atdd-subway-path-master/build.gradle
+++ b/atdd-subway-path-master/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.projectlombok:lombok'
 }
 
 test {
