--- a/atdd-subway-path-master/build.gradle
+++ b/atdd-subway-path-master/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.projectlombok:lombok'
+	implementation 'junit:junit:4.12'
 }
 
 test {
