--- a/spring-cloud-function/build.gradle
+++ b/spring-cloud-function/build.gradle
@@ -19,6 +19,10 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.cloud:spring-cloud-function-context'
+
+    //We don't need spring-cloud-starter-function-web when deploying to AWS
+    //It is used only for local testing
+    implementation 'org.springframework.cloud:spring-cloud-starter-function-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
