로컬에서 Spring Cloud Function 사용하기

--- a/spring-cloud-function-practice/pom.xml
+++ b/spring-cloud-function-practice/pom.xml
@@ -26,9 +26,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-function-context</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-aws</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-aws</artifactId>
+            <artifactId>spring-cloud-starter-function-web</artifactId>
+            <version>1.0.1.RELEASE</version>
         </dependency>
 
         <dependency>
